update the css for header

--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ html{
 
 .header{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-betweengi;
     font-size: 15px;
     background-color: #000000;
 }
