--- a/style/style.css
+++ b/style/style.css
@@ -4,18 +4,24 @@
 
 html{
     font-family: Arial, Helvetica, sans-serif;
-}
-
-.header{
-    display: flex;
-    justify-content: space-betweengi;
-    font-size: 15px;
-    background-color: #000000;
+    font-size: 16px;
 }
 
 body{
     margin: 0;
 }
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    font-size: 15px;
+    background-color: #000000;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+}
+
+
 
 .header .nav_menu{
     padding-left: 0;
@@ -84,3 +90,61 @@ body{
     line-height: 41px;
     padding: 0 24px;
 } 
+
+.band-banner{
+    position: relative;
+    padding-top: 50%;
+    background: url(/image/band_la.jpg) center / cover no-repeat;
+}
+
+.introduce{
+    position: absolute;
+    padding: 32px 16px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #ffffff;
+    text-align: center;
+    
+}
+
+.introduce h3{
+    margin: 0 0 8px 0;
+    font-size: 1.5rem;
+}
+
+.introduce p{
+    font-size: 1rem;
+    margin: 8px 0 0 0;
+}
+
+.container{
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 64px 16px;
+    text-align: center;
+}
+
+.band-title{
+    margin: 0;
+}
+.container .band-description{
+    text-align: justify;
+}
+
+.band-members{
+    display: flex;
+    flex-direction: row;
+    padding: 32px 0;
+}
+
+.band-member img{
+    width: 70%;
+    border-radius: 6px;
+}
+
+.band-tour{
+    background-color: black;
+}
+
+
