--- a/style/style.css
+++ b/style/style.css
@@ -148,3 +148,65 @@ body{
 }
 
 
+.tour{
+    color: white;
+}
+
+.tour-schedule{
+
+}
+
+.tour-schedule{
+    background-color: white;
+    color: #757575;
+    text-align: left;
+}
+
+.tour-detail{
+    padding: 8px 16px;
+    border-bottom: 1px solid #757575;
+}
+
+.tour-detail p{
+    display: inline;
+    margin: 0;
+}
+
+.tour-detail .sold{
+    padding: 0 8px;
+    margin-left: 16px;
+    border-radius: 4px;
+    background-color: red;
+    color: #ffffff;
+}
+
+.tour-detail .quanlity{
+    float: right;
+    background-color: #000000;
+    padding: 2px 8px;
+    color: #ffffff;
+    border-radius: 50%;
+}
+
+
+
+.tour-tickets{
+    width: 30%;
+    padding: 32px 0;
+    overflow: hidden;
+}
+
+.tour-ticket img{
+    display: block;
+}
+
+.tour-infor{
+    background-color: white;
+    text-align: left;
+}
+
+
+
+.tour-tickets img{
+    width: 100%;
+}
